crates/specforge-mcp/tests/snapshots/tests__surface_wiring__command_tool_argument_errors.snap
---
source: crates/specforge-mcp/tests/surface_wiring.rs
expression: errors
---
[
  {
    "arguments": {},
    "structuredContent": {
      "code": "invalid_input",
      "data": {
        "violations": [
          "$: missing required style"
        ]
      },
      "message": "the arguments do not match the tool's input schema: $: missing required style",
      "tool": "specforge.cmds.report"
    }
  },
  {
    "arguments": {
      "style": "xml"
    },
    "structuredContent": {
      "code": "invalid_input",
      "data": {
        "violations": [
          "$.style: \"xml\" is not one of [\"md\",\"json\"]"
        ]
      },
      "message": "the arguments do not match the tool's input schema: $.style: \"xml\" is not one of [\"md\",\"json\"]",
      "tool": "specforge.cmds.report"
    }
  },
  {
    "arguments": {
      "limit": "x",
      "style": "md"
    },
    "structuredContent": {
      "code": "invalid_input",
      "data": {
        "violations": [
          "$.limit: expected integer, got string"
        ]
      },
      "message": "the arguments do not match the tool's input schema: $.limit: expected integer, got string",
      "tool": "specforge.cmds.report"
    }
  }
]
