crates/specforge-mcp/tests/snapshots/tests__surface_wiring__fake_extension_listings_r5_core_named_tool.snap
---
source: crates/specforge-mcp/tests/surface_wiring.rs
expression: extension_listings(&mut server)
---
{
  "diagnostics": [
    {
      "code": "I017",
      "message": "MCP tool 'specforge.validate' of '@test/cmds' not served: a core tool has that name"
    },
    {
      "code": "I017",
      "message": "command 'check' not auto-promoted: explicit MCP tool 'specforge.cmds.check' already exists"
    }
  ],
  "resourceTemplates": [],
  "resources": [
    {
      "mimeType": "application/json",
      "name": "cmds-summary",
      "uri": "specforge://ext/cmds/summary"
    }
  ],
  "tools": [
    {
      "annotations": {
        "openWorldHint": false,
        "readOnlyHint": true
      },
      "category": "core",
      "description": "Explicit check tool",
      "inputSchema": {
        "properties": {
          "strict": {
            "type": "boolean"
          }
        },
        "type": "object"
      },
      "name": "specforge.cmds.check",
      "outputSchema": {
        "properties": {
          "checked": {
            "type": "boolean"
          }
        },
        "type": "object"
      },
      "source": "@test/cmds"
    },
    {
      "annotations": {
        "openWorldHint": false,
        "readOnlyHint": true
      },
      "category": "core",
      "description": "Write a coverage report",
      "inputSchema": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "type": "integer"
          },
          "out": {
            "type": "string"
          },
          "style": {
            "description": "Output style",
            "enum": [
              "md",
              "json"
            ],
            "type": "string"
          },
          "verbose": {
            "default": false,
            "type": "boolean"
          }
        },
        "required": [
          "style"
        ],
        "type": "object"
      },
      "name": "specforge.cmds.report",
      "source": "@test/cmds"
    }
  ]
}
