crates/specforge-mcp/tests/snapshots/tests__surface_wiring__fake_extension_listings_r6_resources.snap
---
source: crates/specforge-mcp/tests/surface_wiring.rs
expression: extension_listings(&mut server)
---
{
  "diagnostics": [
    {
      "code": "I017",
      "message": "command 'check' not auto-promoted: explicit MCP tool 'specforge.cmds.check' already exists"
    }
  ],
  "resourceTemplates": [
    {
      "mimeType": "text/plain",
      "name": "doc",
      "uriTemplate": "acme://doc/{id}"
    },
    {
      "mimeType": "application/json",
      "name": "graph-ext",
      "uriTemplate": "specforge://graph/ext/{id}"
    }
  ],
  "resources": [
    {
      "mime_type": "application/json",
      "name": "cmds-summary",
      "uri": "specforge://ext/cmds/summary"
    }
  ],
  "tools": [
    {
      "category": "core",
      "description": "Explicit check tool",
      "inputSchema": {
        "properties": {
          "strict": {
            "type": "boolean"
          }
        },
        "type": "object"
      },
      "name": "specforge.cmds.check",
      "outputSchema": {
        "properties": {
          "checked": {
            "type": "boolean"
          }
        },
        "type": "object"
      },
      "source": "@test/cmds"
    },
    {
      "category": "core",
      "description": "Write a coverage report",
      "inputSchema": {
        "properties": {
          "limit": {
            "type": "integer"
          },
          "out": {
            "type": "string"
          },
          "style": {
            "description": "Output style",
            "enum": [
              "md",
              "json"
            ],
            "type": "string"
          },
          "verbose": {
            "type": "boolean"
          }
        },
        "required": [
          "style"
        ],
        "type": "object"
      },
      "name": "specforge.cmds.report",
      "source": "@test/cmds"
    }
  ]
}
